--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   color: yellow;
-  background-color: violet;
+  background-color: rgb(80, 51, 80);
 }
 
 .App-logo {
